--- a/ice/package.json
+++ b/ice/package.json
@@ -13,13 +13,16 @@
   },
   "dependencies": {
     "cross-env": "^5.0.0",
+    "ejs": "^2.5.6",
     "koa": "^2.0.0",
     "koa-router": "v7.2.1",
     "mongoose": "^4.11.4",
     "nuxt": "1.0.0-alpha1",
+    "raw-body": "^2.2.0",
     "request-promise": "^4.2.1",
     "sha1": "^1.1.1",
-    "source-map-support": "^0.4.15"
+    "source-map-support": "^0.4.15",
+    "xml2js": "^0.4.17"
   },
   "devDependencies": {
     "babel-eslint": "^7.1.1",
