--- a/ice/package.json
+++ b/ice/package.json
@@ -16,6 +16,7 @@
     "ejs": "^2.5.6",
     "koa": "^2.0.0",
     "koa-router": "v7.2.1",
+    "lodash": "^4.17.4",
     "mongoose": "^4.11.4",
     "nuxt": "1.0.0-alpha1",
     "raw-body": "^2.2.0",
