--- a/ice/package.json
+++ b/ice/package.json
@@ -12,6 +12,7 @@
     "lint": "eslint --ext .js,.vue --ignore-path .gitignore ."
   },
   "dependencies": {
+    "axios": "^0.16.2",
     "cross-env": "^5.0.0",
     "ejs": "^2.5.6",
     "formstream": "^1.1.0",
