--- a/ice/package.json
+++ b/ice/package.json
@@ -21,6 +21,7 @@
     "lodash": "^4.17.4",
     "mongoose": "^4.11.4",
     "nuxt": "1.0.0-alpha1",
+    "pug": "^2.0.0-rc.3",
     "raw-body": "^2.2.0",
     "request-promise": "^4.2.1",
     "sha1": "^1.1.1",
