--- a/ice/package.json
+++ b/ice/package.json
@@ -20,10 +20,12 @@
     "koa-router": "v7.2.1",
     "lodash": "^4.17.4",
     "mongoose": "^4.11.4",
+    "node-sass": "^4.5.3",
     "nuxt": "1.0.0-alpha1",
     "pug": "^2.0.0-rc.3",
     "raw-body": "^2.2.0",
     "request-promise": "^4.2.1",
+    "sass-loader": "^6.0.6",
     "sha1": "^1.1.1",
     "source-map-support": "^0.4.15",
     "xml2js": "^0.4.17"
